--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p id="todayTemp">Temp:</p>
                 <p id="todayWind">Wind:</p>
                 <p id="todayHumidity">Humidity:</p>
-                <p id="currentUV">UV Index:</p>
+                <p id="todayUV">UV Index:</p>
             </div>
             <h2> 5 Day Forecast</h2>
             <div class="forecast">
